RESOLVED FIXED 119891
[WinCairo] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=119891
Summary [WinCairo] Compile error.
peavo
Reported 2013-08-16 04:32:06 PDT
Compiling WinCairo fails with: ..\rendering\FlowThreadController.cpp(274): error C2039: 'updateLayerToRegionMappingsIfNeeded' : is not a member of 'WebCore::RenderNamedFlowThread' c:\cygwin\home\per.arne.vollan\webkit\source\webcore\rendering\RenderNamedFlowThread.h(46) : see declaration of 'WebCore::RenderNamedFlowThread'
Attachments
Patch (1.43 KB, patch)
2013-08-16 04:41 PDT, peavo
no flags
Patch (2.01 KB, patch)
2013-08-16 11:39 PDT, peavo
no flags
peavo
Comment 1 2013-08-16 04:41:12 PDT
Mihnea Ovidenie
Comment 2 2013-08-16 06:33:24 PDT
Comment on attachment 208913 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=208913&action=review > Source/WebCore/rendering/FlowThreadController.cpp:270 > void FlowThreadController::updateRenderFlowThreadLayersIfNeeded() Please guard the declaration of this method in FlowThreadController.h too.
peavo
Comment 3 2013-08-16 11:39:49 PDT
Brent Fulgham
Comment 4 2013-08-16 11:49:37 PDT
Comment on attachment 208937 [details] Patch r=me
WebKit Commit Bot
Comment 5 2013-08-16 12:19:31 PDT
Comment on attachment 208937 [details] Patch Clearing flags on attachment: 208937 Committed r154200: <http://trac.webkit.org/changeset/154200>
WebKit Commit Bot
Comment 6 2013-08-16 12:19:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.