<https://webkit.org/b/119891> [WinCairo] Compile error.

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-08-16
Reviewed by Brent Fulgham.

* rendering/FlowThreadController.cpp: Need USE(ACCELERATED_COMPOSITING) guard.
* rendering/FlowThreadController.h: Need USE(ACCELERATED_COMPOSITING) guard.

Canonical link: https://commits.webkit.org/137875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154200 268f45cc-cd09-0410-ab3c-d52691b4dbfc