Source/WebCore/rendering/FlowThreadController.h
@@ -79,7 +79,9 @@ public:
     void updateFlowThreadsIntoMeasureContentPhase();
     void updateFlowThreadsIntoFinalPhase();
 
+#if USE(ACCELERATED_COMPOSITING)
     void updateRenderFlowThreadLayersIfNeeded();
+#endif
 
 #ifndef NDEBUG
     bool isAutoLogicalHeightRegionsCountConsistent() const;
